<resources>
    <string name="app_name">E-Service CPC</string>
    <string name="slogan">CPC, Laboratoire de reference</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_cart">Cart</string>
    <string name="action_message">Message</string>
    <string name="action_filter_category">Filter</string>
    <string name="action_search">Search</string>

    <string name="title_examen_selected">Titre examen</string>
    <string name="montant_examen_selected">2500 fcfa</string>
    <string name="date_examen_selected">1 Jour</string>
    <string name="title_total_examen">Total</string>

    <string name="send_examens_selected">PROCEED CHECKOUT</string>
    <string name="album_name">E-Service_CPC</string>

    <string name="menu_cart">Cart</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_historical">Historisque</string>
    <string name="menu_promotions">Promotions</string>
    <string name="title_activity_exam_detail">ExamDetailActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ompayment">OMPaymentActivity</string>

    <string name="seller">Marchand</string>
    <string name="seller_id">ref-xyz.115</string>
    <string name="order_number">Numero de commande</string>
    <string name="order_number_id">ORDTIS_0000</string>
    <string name="date">Date</string>
    <string name="date_id">01-09-2016 15:12</string>
    <string name="amount">Montant</string>
    <string name="amount_id">2580 Fcfa</string>
    <string name="payment_data">Donnees de paiement</string>
    <string name="how_to_get_code">Obtenez votre code de paiement depuis votre menu USSD Orange Money</string>
    ]
    <string name="mobile_number">Numero de mobile</string>
    <string name="mobile_number_help">Entrez votre numero de telephone dans le format ideal (sans le prefixe international)</string>
    <string name="payment_code">Code de paiement</string>
    <string name="payment_code_help">Obtenez votre code de paiement en composant votre numero USSD habituel</string>
    <string name="title_activity_take_appointment">Appointment</string>

    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_password">Password</string>
    <string name="i_have_account">I have an account</string>
    <string name="i_forgot_password">I forgot my password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
</resources>
