<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_18dp"
            android:checked="true"
            android:title="Accueil"/>
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_nav_cart"
            android:title="@string/menu_cart"
            app:actionLayout="@layout/menu_counter"/>

        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_menu_message"
            android:title="@string/menu_messages"
            app:actionLayout="@layout/menu_counter"/>

        <item
            android:id="@+id/nav_promo"
            android:icon="@drawable/ic_nav_promotion"
            android:title="@string/menu_promotions"/>

        <item
            android:id="@+id/nav_new"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_historical"/>

    </group>

    <item android:title="Administrate">
        <menu>
            <item
                android:id="@+id/nav_supervisor"
                android:icon="@drawable/ic_supervisor_account_black_24dp"
                android:title="Supervisor" />
        </menu>
    </item>

</menu>