<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="?attr/actionBarSize">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/liste_cart_examens"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/espace_separate" />

    <View
        android:id="@+id/espace_separate"
        style="@style/listDivider"
        android:layout_width="fill_parent"
        android:layout_height="1sp"
        android:layout_above="@+id/espace_total_paye" />

    <RelativeLayout
        android:id="@+id/espace_total_paye"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_above="@+id/btn_valid_commande" >

        <TextView
            android:id="@+id/title_total_examen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:textStyle="bold"
            android:textSize="23dip"
            android:layout_marginLeft="15dp"
            android:text="@string/title_total_examen" />

        <TextView
            android:id="@+id/montant_total_examen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:gravity="right"
            android:ellipsize="end"
            android:textSize="23dip"
            android:textStyle="bold"
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"
            android:text="@string/montant_examen_selected" />

    </RelativeLayout>

    <TextView
        android:id="@+id/btn_valid_commande"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:textSize="22dip"
        android:paddingTop="15dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:textColor="@color/texte_color"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/my_button"
        android:text="@string/send_examens_selected"/>

    <!-- <org.pasteur_yaounde.e_service.utils.font.RobotoTextView
        android:id="@+id/btn_valid_commande"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:textSize="22dip"
        android:paddingTop="15dp"
        android:paddingLeft="60dp"
        app:typeface="robotoMedium"
        android:paddingRight="60dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:textColor="@color/texte_color"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/send_examens_selected"
        android:background="@drawable/transparent_button_selector" /> -->

</RelativeLayout>